name:                bitcoin-projections
version:             1.0
license:             AllRightsReserved
author:              Clark Gaebel, Ben Foppa
maintainer:          cgaebel@uwaterloo.ca, benjamin.foppa@gmail.com
build-type:          Simple
cabal-version:       >=1.8

-- TODO: Make monte-carlo upgrade to vector 0.10, so we can too.
executable bitcoin-projections
  ghc-options:         -Wall -O2 -threaded -rtsopts=all -with-rtsopts=-N
  main-is:             Main.hs
  build-depends:       base ==4.6.*
                     , deepseq ==1.3.*
                     , time ==1.4.*
                     , vector ==0.10.*
                     , monte-carlo ==0.4.*
                     , netwire ==4.0.*
                     , monad-par ==0.3.*
